mobile spacing fix

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -284,14 +284,15 @@ body
       grid-column: 2
 
   .grid
-    height: 60vh
+    height: auto
     grid-template-columns: 1fr
     grid-row: 1
 
   .player
     display: none
-    grid-template-rows: repeat(3, 1fr)
+    grid-template-rows: repeat(3, 0.25fr)
     font-size: 0.7em
+    padding: 20px
     transition: all 0.5s
 
     .current
@@ -305,7 +306,7 @@ body
 
 
       &:before
-        top: 42px
+        top: 22px
         margin-left: -7.5px
 
 
